--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
         <div class="col-12">
           <div class="card">
             <div class="card-header">Todo App</div>
+            <div class="card-body">
+              <form action="">
+                <div class="input-grop">
+                  <input type="text" id="txtTaskName" class="form-cotrol" />
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    id="btnAddNewTask"
+                  >
+                    ADD
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
           <div class="card mt-3">
-            <ul id="task-list" class="list-group list-group-flush">
-              <!-- <li class="task task-group-item">
-                <div class="form-check">
-                  <input type="checkbox" id="1" class="form-check-input" />
-                  <label for="1" class="form-check-lable">Gorev 1</label>
-                </div>
-              </li>
-              <li class="task task-group-item">
-                <div class="form-check">
-                  <input type="checkbox" id="2" class="form-check-input" />
-                  <label for="1" class="form-check-lable">Gorev 2</label>
-                </div>
-              </li>
-              <li class="task task-group-item">
-                <div class="form-check">
-                  <input type="checkbox" id="3" class="form-check-input" />
-                  <label for="1" class="form-check-lable">Gorev 3</label>
-                </div>
-              </li> -->
-            </ul>
+            <div class="card-header">
+              <button id="btnClear" class="btn btn-danger btn-sm float-end">
+                CLEAR
+              </button>
+            </div>
+            <ul id="task-list" class="list-group list-group-flush"></ul>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <li class="task">Gorev 3</li>
     </ul> -->
 
-    <script src="./app.js"></script>
+    <!-- <script src="./base.js"></script> -->
     <script src="./DOM.JS"></script>
   </body>
 </html>
