To-Do List eklendi ucuncu bolum tamamlandi

--- a/DOM/adding-new-task.html
+++ b/DOM/adding-new-task.html
@@ -49,19 +49,20 @@
     <script>
       "use strict";
 
-      let sonuc;
-
       let gorevListesi = [
         { id: 1, gorevAdi: "Görev 1" },
         { id: 2, gorevAdi: "Görev 2" },
         { id: 3, gorevAdi: "Görev 3" },
         { id: 4, gorevAdi: "Görev 4" },
       ];
+      displayTask(); // gorev listesinde baslangicta ekrana yansisin
 
-      let ul = document.getElementById("task-list");
+      function displayTask() {
+        let ul = document.getElementById("task-list");
+        ul.innerHTML = "";
 
-      for (let gorev of gorevListesi) {
-        let li = `
+        for (let gorev of gorevListesi) {
+          let li = `
                 <li class="task list-group-item">
                     <div class="form-check">
                         <input type="checkbox" id="${gorev.id}" class="form-check-input">
@@ -70,22 +71,35 @@
                 </li>
             `;
 
-        ul.insertAdjacentHTML("beforeend", li);
+          ul.insertAdjacentHTML("beforeend", li);
+        }
       }
-
-      // document.querySelector("#btnClear").addEventListener("click", function(event) {
-      //     console.log("click event: clear");
-
-      //     event.preventDefault();
-      // });
 
       document
         .querySelector("#btnAddNewTask")
         .addEventListener("click", newTask);
+      document
+        .querySelector("#btnAddNewTask")
+        .addEventListener("keypress", function () {
+          if (event.key == "Enter") {
+            //enter tusu ile click iliskilendirme
+            document.getElementById("btnAddNewTask").click();
+          }
+        });
 
       function newTask(event) {
-        // console.log(event.target);
-        event.target.classList.add("btn-danger");
+        let taskInput = document.querySelector("#txtTaskName");
+        if (taskInput.value == "") {
+          alert("Gorev girmelisiniz...");
+        } else {
+          gorevListesi.unshift({
+            // push liste sonuna eleman eklerken unshift liste basina eleman ekler
+            id: gorevListesi.length + 1,
+            gorevAdi: taskInput.value,
+          });
+          taskInput.value = "";
+          displayTask();
+        }
 
         event.preventDefault();
       }
