--- a/Slider/index.html
+++ b/Slider/index.html
@@ -32,13 +32,13 @@
           <div class="card">
             <img class="card-img-top" src="img/bmw.jpg" alt="" />
             <div class="card-body">
-              <h5 class="card-title">Bmw 116d</h5>
+              <h5 class="card-title" id="title">Bmw 116d</h5>
               <p class="card-text"></p>
               <a class="card-link" href="#">Read More</a>
             </div>
             <div class="card-footer">
-              <i class="fas fa-arrow-circle-left fa-2x arrow"></i>
-              <i class="fas fa-arrow-circle-right fa-2x arrow"></i>
+              <i class="fas fa-arrow-circle-left fa-2x arrow" id="left"></i>
+              <i class="fas fa-arrow-circle-right fa-2x arrow" id="right"></i>
             </div>
           </div>
         </div>
@@ -48,6 +48,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
