Slider ve Form Validator tamamlandi ve eklendi

--- a/ToDoByMySelf/SliderApp/index.html
+++ b/ToDoByMySelf/SliderApp/index.html
@@ -44,7 +44,7 @@
           <div
             id="info"
             class="border m-4 p-3 rounded-2 shadow-lg overflow-auto mb-auto"
-            style="background-color: bisque; max-height: 320px"
+            style="background-color: bisque; height: 420px"
           >
             <p><span class="fw-bold">Brand : </span><span id="brand"></span></p>
             <p>
